Fix double underline on post title hover, reduce spacing of listed posts

--- a/source/css/_component/posts-expand.styl
+++ b/source/css/_component/posts-expand.styl
@@ -29,8 +29,9 @@
 .posts-expand .post-title-link {
   color: $black-light;
   border-bottom: none;
-  line-height: 1.4;
+  line-height: 1.2;
   display: inline-block;
+  text-decoration: none;
 
   >div{
     vertical-align: top;
@@ -170,7 +171,7 @@
 .posts-expand {
   .post-eof {
     display: block;
-    margin 160px auto 120px
+    margin 90px auto 90px
     width 8%
     height 1px
     background $grey-light
